<resources>
    <string name="app_name">My Corona Tracker</string>
    <string name="titleText">Welcome!</string>
    <string name="descriptionText">This application is designed to inform you and other users if you have been in recent contact with an infected individual.</string>
    <string name="emailText">Email:</string>
    <string name="nameText">Name:</string>
    <string name="passText">Password:</string>
    <string name="confirmPassText">Confirm Password:</string>
    <string name="emailHint">Enter your email here</string>
    <string name="nameHint">Enter your name here</string>
    <string name="passHint">Enter your password here</string>
    <string name="confirmPassHint">Enter your password again</string>
    <string name="registerText">Register</string>
    <string name="loginText">Login</string>
    <string name="enterDetails">Please enter your details: </string>
    <string name="coronaTogglePositive">I tested positive for Corona </string>
    <string name="coronaToggleNegative">I don\'t have Corona </string>
    <string name="mapsString">View Visited Locations</string>
    <string name="menuAbout">About</string>
    <string name="menuLogout">Logout</string>
    <string name="title_activity_google_map">Map</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Name" />
    <string name="name">Name</string>
    <string name="Infection_Status">Infection Status</string>
</resources>