<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2D9FF">

    <ImageButton
        android:id="@+id/infoButton_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:background="#A2D9FF"
        android:backgroundTint="#A2D9FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coronaToggleButton_final"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

    <View
        android:id="@+id/view"
        android:layout_width="349dp"
        android:layout_height="272dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/round_border_2"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/coronaToggleButton_final"
        android:layout_width="281dp"
        android:layout_height="49dp"
        android:layout_marginTop="84sp"
        android:background="#2196F3"
        android:checked="false"
        android:rotationY="0"
        android:textOff="@string/coronaToggleNegative"
        android:textOn="@string/coronaTogglePositive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/nameDisplayTV"
        android:layout_width="257dp"
        android:layout_height="61dp"
        android:layout_marginTop="48sp"
        android:layout_marginBottom="69sp"
        android:fontFamily="@font/basic"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/infectionStatusTV"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/infectionStatusTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:fontFamily="@font/basic"
        android:gravity="center"
        android:text="@string/Infection_Status"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/view" />
</androidx.constraintlayout.widget.ConstraintLayout>